<?xml version="1.0"?>
<package format="2">
  <name>moveit_visualize_data</name>
  <version>0.0.0</version>
  <description>The moveit_visualize_data package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="gabriel.koenig@unibas.ch">gabriel</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/moveit_visualize_data</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>rosconsole</build_depend>
  <exec_depend>rosconsole</exec_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <build_depend>moveit_planners_ompl</build_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
